<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.maksimenko.homeaccounting.MainActivity">

    <item
        android:id="@+id/action_transport_deat"
        android:orderInCategory="100"
        android:title="@string/action_transport_deat"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_transport_marshrutka_cheap"
        android:orderInCategory="100"
        android:title="@string/action_transport_marshrutka_cheap"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_transport_marshrutka"
        android:orderInCategory="100"
        android:title="@string/action_transport_marshrutka"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_grocery"
        android:orderInCategory="100"
        android:title="@string/action_grocery"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
</menu>
