<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.maksimenko.homeaccounting.TransportActivity">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/chooseTransportRadioGroup"
        android:longClickable="false">

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_transport_deat"
        android:id="@+id/deatRadioButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_transport_marshrutka_cheap"
        android:id="@+id/cheapLittleBusRadioButton"
        android:layout_below="@+id/deatRadioButton"
        android:layout_marginTop="28dp"
        android:singleLine="true"
        android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_transport_marshrutka"
            android:id="@+id/littleBusRadioButton"
            android:layout_below="@+id/cheapLittleBusRadioButton"
            android:layout_marginTop="28dp"
            android:singleLine="true"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/another"
            android:id="@+id/anotherTransportRadioButton"
            android:layout_below="@+id/littleBusRadioButton"
            android:layout_marginTop="28dp"
            android:singleLine="true"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shop_sum"
        android:id="@+id/textView3"
        android:singleLine="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView4"
        android:layout_above="@+id/personNumberSpinner" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/sumEditText"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currencySpinner"
        android:entries="@array/currencylist"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/person_number"
        android:id="@+id/textView4"
        android:layout_below="@+id/chooseTransportRadioGroup"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/personNumberSpinner"
        android:entries="@array/personNumberList"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_pay"
        android:id="@+id/sendPaymentButton"
        android:onClick="sendPaymentButtonPressed"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp" />

</RelativeLayout>