<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.maksimenko.homeaccounting.GroceryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shop_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shopSpinner"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:entries="@array/shoplist"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shop_sum"
        android:id="@+id/textView2"
        android:layout_below="@+id/shopSpinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amount_editText"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_toStartOf="@+id/button3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_pay"
        android:id="@+id/button3"
        android:layout_below="@+id/amount_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="applyButtonPressed"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currencySpinner"
        android:layout_above="@+id/button3"
        android:layout_toEndOf="@+id/amount_editText"
        android:layout_alignTop="@+id/amount_editText"
        android:entries="@array/currencylist" />

</RelativeLayout>
